--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -22,6 +22,17 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Cadastro"
+            app:layout_constraintBaseline_toBaselineOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/button_first"
+            app:layout_constraintTop_toBottomOf="@+id/button_first"
+            app:layout_constraintVertical_bias="0.0"
+            tools:layout_editor_absoluteX="16dp" />
+
         <EditText
             android:id="@+id/editNameText"
             android:layout_width="367dp"
@@ -32,15 +43,6 @@
             android:hint="Nome"
             app:layout_constraintStart_toStartOf="@+id/textView"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Cadastro"
-            app:layout_constraintTop_toBottomOf="@+id/button_first"
-            tools:layout_editor_absoluteX="16dp"
-            />
 
         <EditText
             android:id="@+id/editPasswordText"
@@ -62,6 +64,63 @@
             android:text="Salvar"
             app:layout_constraintStart_toStartOf="@+id/editPasswordText"
             app:layout_constraintTop_toBottomOf="@+id/editPasswordText" />
+
+
+        <TextView
+            android:id="@+id/AssociateBoss"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="48dp"
+
+            android:text="Associar Subordinado"
+            app:layout_constraintStart_toStartOf="@+id/button"
+            app:layout_constraintTop_toBottomOf="@+id/button" />
+
+        <Button
+            android:id="@+id/saveBoss"
+            android:layout_width="124dp"
+            android:layout_height="56dp"
+            android:layout_marginTop="68dp"
+            android:onClick="saveBoss"
+            android:text="Salvar"
+            app:layout_constraintStart_toStartOf="@+id/subordinado"
+            app:layout_constraintTop_toBottomOf="@+id/subordinado" />
+
+        <Spinner
+            android:id="@+id/chefe"
+            android:layout_width="204dp"
+            android:layout_height="36dp"
+            android:layout_marginTop="44dp"
+            android:prompt="@string/placeholder_text"
+            app:layout_constraintStart_toStartOf="@+id/AssociateBoss"
+            app:layout_constraintTop_toBottomOf="@+id/AssociateBoss" />
+
+        <Spinner
+            android:id="@+id/subordinado"
+            android:layout_width="204dp"
+            android:layout_height="36dp"
+            android:layout_marginTop="64dp"
+            android:prompt="@string/placeholder_text"
+            app:layout_constraintStart_toStartOf="@+id/chefe"
+            app:layout_constraintTop_toBottomOf="@+id/chefe" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:text="Chefe"
+            app:layout_constraintStart_toStartOf="@+id/AssociateBoss"
+            app:layout_constraintTop_toBottomOf="@+id/AssociateBoss" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="28dp"
+            android:text="Subordinado"
+            app:layout_constraintTop_toBottomOf="@+id/chefe"
+            tools:layout_editor_absoluteX="16dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
