--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -22,14 +22,24 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TableLayout
-            android:id="@+id/table"
+        <HorizontalScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="28dp"
-            android:stretchColumns="1"
-            app:layout_constraintTop_toBottomOf="@+id/button_second"
-            tools:layout_editor_absoluteX="16dp" />
+            android:layout_marginTop="15dp"
+            app:layout_constraintStart_toStartOf="@+id/button_second"
+            app:layout_constraintTop_toBottomOf="@+id/button_second">
+
+            <TableLayout
+                android:id="@+id/table"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="28dp"
+                android:stretchColumns="1"
+                app:layout_constraintTop_toBottomOf="@+id/button_second"
+                tools:layout_editor_absoluteX="16dp" />
+
+        </HorizontalScrollView>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
